--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.2.0",
     "expo-linking": "~7.1.5",
+    "expo-location": "^18.1.5",
     "expo-media-library": "^17.1.7",
     "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.9",
