--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-location": "^18.1.5",
     "expo-media-library": "^17.1.7",
     "expo-router": "~5.0.7",
+    "expo-sharing": "^13.1.5",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -43,6 +44,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
     "react-native-calendars": "^1.1312.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal-datetime-picker": "^18.0.0",
