--- a/app.json
+++ b/app.json
@@ -20,7 +20,11 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "android.permission.CAMERA"
+      ],
+      "package": "com.rakimalpha.staffattendance"
     },
     "web": {
       "bundler": "metro",
@@ -42,6 +46,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "06c9eb7e-607a-41a4-9965-ad4edd558b8b"
+      }
     }
   }
 }
